cloud-apps/schedule-mqtt-announcer/src/k8s/announcer-5min.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: announcer-5min
  namespace: schedule-mqtt-announcer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: announcer-5min
  template:
    metadata:
      labels:
        app.kubernetes.io/name: announcer-5min
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/"
        prometheus.io/port: "9090"
    spec:
      containers:
        - name: announcer
          image: ghcr.io/dannixon/emfcamp-schedule-mqtt-announcer:6ff4d99a491de8143631288efc0d9a662736e5f1
          ports:
            - name: metrics
              containerPort: 9090
              protocol: TCP
