cloud-apps/schedule-mqtt-announcer/src/k8s/announcer-dev.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: announcer-dev
  namespace: schedule-mqtt-announcer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: announcer-dev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: announcer-dev
    spec:
      containers:
        - name: announcer
          image: ghcr.io/dannixon/emfcamp-schedule-mqtt-announcer:6ff4d99a491de8143631288efc0d9a662736e5f1
          ports:
            - name: metrics
              containerPort: 9090
              protocol: TCP
