cloud-apps/schedule-mqtt-announcer/src/k8s/mosquitto.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: schedule-mqtt-announcer
  labels:
    app.kubernetes.io/name: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mosquitto
    spec:
      volumes:
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
      containers:
        - name: mosquitto
          image: docker.io/library/eclipse-mosquitto:2.0.15
          volumeMounts:
            - mountPath: "/mosquitto/config"
              name: mosquitto-config
        - name: message-debug
          image: docker.io/library/eclipse-mosquitto:2.0.15
          command:
            - /usr/bin/mosquitto_sub
            - -h
            - 127.0.0.1
            - -p
            - "18831"
            - -t
            - "#"
            - -v

---
apiVersion: v1
kind: Service
metadata:
  name: mqtt-internal-pub
  namespace: schedule-mqtt-announcer
spec:
  selector:
    app.kubernetes.io/name: mosquitto
  ports:
    - name: mqtt
      protocol: TCP
      port: 18830

---
apiVersion: v1
kind: Service
metadata:
  name: mqtt-external-sub
  namespace: schedule-mqtt-announcer
spec:
  selector:
    app.kubernetes.io/name: mosquitto
  ports:
    - name: mqtt
      protocol: TCP
      port: 18831

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mqtt
  namespace: schedule-mqtt-announcer
spec:
  entryPoints:
    - mqtt-18831
  routes:
    - kind: Rule
      match: HostSNI(`*`)
      services:
        - Kind: Service
          name: mqtt-external-sub
          port: 18831
